# OpenMemory

./: .dockerignore  .env.example  .gitignore  DOCS.md  Dockerfile  README.md  docker-compose.yml  main.py  openmemory.yaml.example  pyproject.toml
.github/workflows/: pypi-publish.yml  unit-tests.yml
examples/: anthropic_agent.py  openai_agent.py
groundmemory/: __init__.py  __main__.py  mcp_server.py  session.py
groundmemory/adapters/: __init__.py  anthropic.py  openai.py
groundmemory/bootstrap/: __init__.py  compaction.py  injector.py  token_counter.py
groundmemory/config/: .env.example  __init__.py  groundmemory.yaml.example
groundmemory/core/: __init__.py  backup.py  chunker.py  index.py  relations.py  search.py  storage.py  sync.py  workspace.py
groundmemory/tools/: __init__.py  base.py  memory_bootstrap.py  memory_compact.py  memory_delete.py  memory_dispatcher.py  memory_get.py  memory_list.py  memory_read.py  memory_relate.py  memory_replace.py  memory_search.py  memory_write.py
openmemory/: __init__.py  config.py  mcp_server.py  session.py
openmemory/adapters/: __init__.py  anthropic.py  openai.py
openmemory/bootstrap/: __init__.py  compaction.py  injector.py
openmemory/config/: .env.example  __init__.py  openmemory.yaml.example
openmemory/core/: __init__.py  chunker.py  embeddings.py  graph.py  index.py  relations.py  search.py  storage.py  sync.py  workspace.py
openmemory/tools/: __init__.py  base.py  memory_delete.py  memory_get.py  memory_list.py  memory_relate.py  memory_search.py  memory_write.py
tests/: conftest.py  test_compaction.py  test_embeddings_integration.py  test_mcp_server.py  test_memory_delete.py  test_memory_get.py  test_memory_list.py  test_memory_read.py  test_memory_relate.py  test_memory_replace.py  test_memory_search.py  test_memory_write.py  test_mmr.py  test_relations_sync.py  test_session.py  test_workspace_security.py
