[project]
name = "openmemory-ai"
version = "0.2.3"
description = "Persistent, semantic memory for AI agents - local-first, framework-agnostic, production-ready"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings[yaml]>=2.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "tiktoken>=0.7",
    "PyYAML>=6.0",
    "mcp[cli]>=1.6",
    "uvicorn>=0.29",
]

[project.urls]
Repository = "https://github.com/huss-mo/OpenMemory"
Issues = "https://github.com/huss-mo/OpenMemory/issues"
Documentation = "https://github.com/huss-mo/OpenMemory/blob/master/DOCS.md"

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
openmemory-mcp = "openmemory.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openmemory"]
artifacts = [
    "openmemory/config/openmemory.yaml.example",
    "openmemory/config/.env.example",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "embeddings: integration tests that require a real embedding provider (deselect with -m 'not embeddings')",
]
