[project]
name = "groundmemory"
version = "0.5.4"
description = "Persistent, semantic memory for AI agents - mcp-native, local-first, framework-agnostic, production-ready"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings[yaml]>=2.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "tiktoken>=0.7",
    "PyYAML>=6.0",
    "mcp[cli]>=1.6",
    "uvicorn>=0.29",
    "sqlite-vec>=0.1.6",
]

[project.urls]
Documentation = "https://github.com/huss-mo/GroundMemory/blob/master/DOCS.md"
Issues = "https://github.com/huss-mo/GroundMemory/issues"

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
groundmemory-mcp = "groundmemory.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["groundmemory"]
artifacts = [
    "groundmemory/config/groundmemory.yaml.example",
    "groundmemory/config/.env.example",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "local: tests that require sentence-transformers / cross-encoder installed locally (pip install groundmemory[local])",
    "api_embeddings: tests that require a configured OpenAI-compatible HTTP embedding endpoint",
]
